[package]
name = "banzai-cms"
version = "0.1.0"
edition = "2024"
description = "Library for the Banzai CMS"
license = "MIT"
readme = "README.md"
repository = "https://github.com/BanzaiCMS/banzai-cms"
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json","blocking"] }

